--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -41,3 +41,26 @@
 .buy__btn a:hover{
     color: #fff;
 }
+
+.timer__count{
+    background: var(--primary-color);
+    height: 300px;
+}
+
+.timer__count img{
+    width: 70% !important;
+    height: 70% !important;
+    object-fit: contain;
+}
+
+.store__btn{
+    background: #fff;
+    color: var(--primary-color);
+}
+.store__btn a{
+    color: var(--primary-color);
+    font-weight: 600;
+}
+.store__btn a:hover{
+    color: var(--primary-color);
+}
