--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -62,17 +62,17 @@
   position: relative;
 }
 
-.badges{
-    position: absolute;
-    top: -6px;
-    right: -10px;
-    /* content: ""; */
-    background: var(--primary-color);
-    color: #fff;
-    width: 15px; 
-    font-size: 11px;
-    font-weight: 1000;
-  height: 15px; 
+.badges {
+  position: absolute;
+  top: -6px;
+  right: -10px;
+  /* content: ""; */
+  background: var(--primary-color);
+  color: #fff;
+  width: 15px;
+  font-size: 11px;
+  font-weight: 1000;
+  height: 15px;
   border-radius: 20px;
   display: flex;
   align-items: center;
@@ -95,4 +95,20 @@
 
 .nav__active {
   font-weight: 700 !important ;
+}
+
+.sticky__header {
+  position: sticky;
+  width: 100%;
+  height: 70px;
+  line-height: 70px;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  box-shadow: 3px 3px 8px -3px #ddd;
+  background: #fff;
+}
+
+.sticky__header .badges {
+  top: 14px;
 }
