--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,8 +1,8 @@
-.Header {
+/* .header {
   width: 100%;
-  /* height: 70px; */
+  height: 70px;
   line-height: 70px;
-}
+} */
 
 .nav__wrapper {
   display: flex;
@@ -111,4 +111,68 @@
 
 .sticky__header .badges {
   top: 14px;
+}
+
+
+/* @media only screen and (max-width: 600px) */
+@media only screen and (max-width: 768px) {
+  .navigation{
+    position: fixed;
+    display: flex;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.53) ;
+    z-index: 9999;
+    display: none;
+  }
+  .menu{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 250px;
+    height: 100%;
+    background: #fff;
+    z-index: 99999;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+  }
+  .active__menu{
+    display: block;
+  }
+
+  .mobile__menu span i{
+    font-size: 1.1rem !important;
+  }
+
+  .mobile__menu{
+    display: block;
+  }
+  .logo img{
+    width: 1rem;
+    height: 1rem;
+  }
+  .logo h1{
+    font-size: 1rem;
+  }
+
+  .fav__icon i, .cart__icon i{
+    font-size: 1.2rem !important;
+  }
+  .nav__icons span img{
+    width: 1.4rem;
+    height: 1.4rem;
+  }
+  .header{
+    width: 100%;
+    height: 60px;
+    /* line-height: 60px; */
+  }
+  .nav__wrapper{
+    /* background: green; */
+    height: 60px;
+  }
 }
