--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -80,11 +80,56 @@
   z-index: 2;
 }
 
-.nav__icons span img {
+.nav__icons .profile img {
   width: 30px;
   height: 30px;
   cursor: pointer;
+  border-radius: 50%;
 }
+
+.nav__icons .profile {
+  position: relative;
+  z-index: 9;
+}
+
+/* .nav__icons .profile .profile__actions {
+  position: absolute;
+  margin-top: auto;
+  top: 50px;
+  left: 0;
+  width: 150px;
+  z-index: 10;
+  padding: 15px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background: var(--card-bg-01);
+  line-height: 30px;
+  display: none;
+  cursor: pointer;
+} */
+
+.nav__icons .profile .profile__actions {
+  position: absolute;
+  margin-top: auto;
+  top: 50px;
+  left: 0;
+  width: 150px;
+  z-index: 10;
+  padding: 15px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background: var(--card-bg-01);
+  line-height: 30px;
+  cursor: pointer;
+}
+
+.show__profileActions{
+  display: block;
+}
+
+
 
 .mobile__menu {
   font-size: 1.3rem;
@@ -113,21 +158,20 @@
   top: 14px;
 }
 
-
 /* @media only screen and (max-width: 600px) */
 @media only screen and (max-width: 768px) {
-  .navigation{
+  .navigation {
     position: fixed;
     display: flex;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.53) ;
+    background: rgba(0, 0, 0, 0.53);
     z-index: 9999;
     display: none;
   }
-  .menu{
+  .menu {
     position: absolute;
     top: 0;
     right: 0;
@@ -140,38 +184,39 @@
     justify-content: center;
     gap: 1rem;
   }
-  .active__menu{
+  .active__menu {
     display: block;
   }
 
-  .mobile__menu span i{
+  .mobile__menu span i {
     font-size: 1.1rem !important;
   }
 
-  .mobile__menu{
+  .mobile__menu {
     display: block;
   }
-  .logo img{
+  .logo img {
     width: 1rem;
     height: 1rem;
   }
-  .logo h1{
+  .logo h1 {
     font-size: 1rem;
   }
 
-  .fav__icon i, .cart__icon i{
+  .fav__icon i,
+  .cart__icon i {
     font-size: 1.2rem !important;
   }
-  .nav__icons span img{
+  .nav__icons span img {
     width: 1.4rem;
     height: 1.4rem;
   }
-  .header{
+  .header {
     width: 100%;
     height: 60px;
     /* line-height: 60px; */
   }
-  .nav__wrapper{
+  .nav__wrapper {
     /* background: green; */
     height: 60px;
   }
